# stm32-war-thunder-localhost-to-periph

./: README.md
stm/Inc/: font12.h  font20.h  font24.h  font8.h  main.h  stm32f1xx_it.h
stm/Src/: ILI9341_STM32_Driver.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
win/: CMakeLists.txt
win/SRC/: main.cpp  stmUsb.cpp
